--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
-<!-- <div>
-  <h1 class="text-center bg-cyan-200 text-orange-950" style="color: black; font-weight: 100;">Welome to Gada Electronics</h1>
+<div class="app-container">
+  <app-nav-bar></app-nav-bar>
+  <div class="content-container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
-<router-outlet></router-outlet> -->
-<router-outlet></router-outlet>
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-</head>
-<body>
-<div class="search-container">
-  <app-root _ngcontent-ng-c2256458454="">
-  <router-outlet></router-outlet>
-</app-root>
-</div >
-</body>
-</html> -->
+
