--- a/src/app/components/display-flights/display-flights.component.html
+++ b/src/app/components/display-flights/display-flights.component.html
@@ -5,17 +5,18 @@
     <div class="flight-card">
       <div class="flight-info">
         <div class="airline-logo">
-          <img src="https://www.kindpng.com/picc/m/69-697714_air-india-logo-air-india-airlines-logo-hd.png"
+          <img src="assets/logo.jpg"
             alt="Airline Logo"> <!-- Update the image path -->
         </div>
         <div class="flex-coloumcard">
-          <h2 class="date">{{flight.date | date:"dd-MM-yyyy"}}</h2>
+          <h2 class="date">Date: {{flight.date | date:"dd-MM-yyyy"}}</h2>
           <div class="flight-times">
             <div class="sourceDestinationTimeDiv">
-              <h2 class="time">{{ flight.departure_time }}</h2>
+              <h2 class="departure-time">{{ flight.departure_time }}</h2>
               <h2 class="source">{{ flight.source }}</h2>
                 <div class="strike"><img class="line" src="/assets/line.png"></div>
               <h2 class="destination">{{flight.destination }}</h2>
+              <h2 class="arrival-time">{{flight.arrival_time}}</h2>
             </div>
           </div>
         </div>
