--- a/src/app/components/display-flights/display-flights.component.scss
+++ b/src/app/components/display-flights/display-flights.component.scss
@@ -9,14 +9,12 @@
   align-items: center;
   justify-content: flex-start;
   padding: 40px 20px;
-  // background-color: #f1f1f1; /* Light background color */
-  // background: linear-gradient(140deg, #b272f5 30%, #3878e7 60%);
-  background-image: url('/assets/NewBackground.jpg');
+  background-image: url('/assets/NewBackground2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
-  overflow-y: auto; /* Allow scrolling if content overflows */
+  overflow-y: auto;
 }
 
 .flight-item {
@@ -29,6 +27,7 @@
 
 /* Heading style */
 h1 {
+  margin-top: 5%;
   font-family: 'Nunito', sans-serif;
   font-weight: 900;
   font-size: xx-large;
@@ -41,7 +40,7 @@ h1 {
 /* Flight card */
 .flight-card {
   width: 100%;
-  max-width: 800px;
+  max-width: 600pt;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -62,9 +61,11 @@ h1 {
   display: flex;
   align-items: center;
   width: 100%;
+  overflow: hidden;
 }
 
 .airline-logo img {
+  // position: relative;
   height: 100px;
   width: 100px;
   margin-right: 20px;
@@ -78,6 +79,7 @@ width: 100%;
 
 }
 .flight-times {
+  margin-bottom: 20px;
   text-align: center;
   display: flex;
   justify-content: flex-start;
@@ -85,38 +87,44 @@ width: 100%;
   vertical-align: middle;
 }
 .line{
-  width: 100%;
-  height: 100%;
+  width: 95%;
 }
 .date{
   align-self: center;
   text-align: center;
+  margin-left: 20pt;
   padding-right: 5vw;
 }
 
 
 .sourceDestinationTimeDiv{
+  padding-left: 24px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.time {
-  margin-right: 1.2vw;
-  margin-left: 1.2vw;
+.departure-time {
+  // margin-right: 1.2vw;
+  margin-left: 1.5vw;
+  margin-top: 10px;
+}
+
+.arrival-time{
+  margin-left: 1.5vw;
   margin-top: 10px;
 }
 
 .strike{
-  width: 15vw;
+  width: 14vw;
+  margin-left: 1.5vw;
 }
 .source {
   // margin-right: 1.67vw;
-  margin-right: 1.2vw;
+  // margin-right: 1.2vw;
   margin-left: 1.2vw;
   margin-top: 10px;
 }
 .destination{
-  margin-right: 1.2vw;
   margin-left: 1.2vw;
   margin-top: 10px;
 }
