--- a/src/app/components/search-flight/search-flight.component.html
+++ b/src/app/components/search-flight/search-flight.component.html
@@ -1,39 +1,45 @@
 <!-- search-flight.component.html -->
-
-<div class="container">
-  <div class="h1container">
-    <h1>Search Flights</h1>
+  <div class="Logo">
+    <div class="image">
+      <img src="assets/mainLogo.png">
+    </div>
   </div>
+<div class="parent-container">
+  <div class="container">
+    <div class="h1container">
+      <h1>Search Flights</h1>
+    </div>
 
-  <form (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="source">Source:</label>
-      <!-- <input type="text" id="source" name="source" required> -->
-      <input type="text" list="Destinations" placeholder="Ex. BOM" [(ngModel)]="searchform.source" name="source"
-        required />
-      <datalist id="Destinations">
-        @for(item of uniquesource; track $index){
-        <option [value]="item">{{item}}</option>
-        }
-      </datalist>
-    </div>
-    <div class="form-group">
-      <label for="destination">Destination:</label>
-      <!-- <input type="text" id="destination" name="destination"  required> -->
-      <input type="text" list="Destinations" placeholder="Ex. NYC" [(ngModel)]="searchform.destination"
-        name="destination" required />
-      <datalist id="Destinations">
-        @for(item of uniquedestination; track $index){
-        <option [value]="item">{{item}}</option>
-        }
-      </datalist>
-    </div>
-    <div class="form-group">
-      <label for="date">Date:</label>
-      <input type="date" id="date" name="date" [(ngModel)]="searchform.date" name="date" required>
-    </div>
-    <div class="button_div">
-      <button type="submit" class="btn btn-primary custom-button" (click)="onSubmit()">Search</button>
-    </div>
-  </form>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="source">Source:</label>
+        <!-- <input type="text" id="source" name="source" required> -->
+        <input type="text" list="Destinations" placeholder="Ex. BOM" [(ngModel)]="searchform.source" name="source"
+          required />
+        <datalist id="Destinations">
+          @for(item of uniquesource; track $index){
+          <option [value]="item">{{item}}</option>
+          }
+        </datalist>
+      </div>
+      <div class="form-group">
+        <label for="destination">Destination:</label>
+        <!-- <input type="text" id="destination" name="destination"  required> -->
+        <input type="text" list="Destinations" placeholder="Ex. NYC" [(ngModel)]="searchform.destination"
+          name="destination" required />
+        <datalist id="Destinations">
+          @for(item of uniquedestination; track $index){
+          <option [value]="item">{{item}}</option>
+          }
+        </datalist>
+      </div>
+      <div class="form-group">
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date" [(ngModel)]="searchform.date" name="date" required>
+      </div>
+      <div class="button_div">
+        <button type="submit" class="btn btn-primary custom-button">Search</button>
+      </div>
+    </form>
+  </div>
 </div>
